--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2492,107 +2492,107 @@ stories:
   domain: http://www.richmondregister.com/
   link: https://www.richmondregister.com/cnhi_network/accused-burglar-offers-homeowner-meth-hit/image_330571eb-9123-51a7-a891-925c68ae95ed.html
 images:
-- name: curtain-curtain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-missle.jpg
-- name: legal-statue-legalstatue-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colored-circuits.jpg
-- name: crow_colorful_dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
-- name: old-cabin-oldcabin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-constitution.jpg
-- name: mosaic-face-mosaic-face-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-propaganda-leaflets.jpg
-- name: old-house-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
-- name: oldcabin-store-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-plentiful.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
-- name: docks-docks-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-three.jpg
-- name: supreme-court-supremecourt-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kandinsky-bv.jpg
-- name: white-house-lawn-white-house-lawn-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-attack-planes.jpg
-- name: oldhouse-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
-- name: fence-fence-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-kand-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
-- name: windowmountain-window-mountain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-asteroids.jpg
-- name: berlinwall2-berlinwall-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-missle.jpg
-- name: birdhouse-birdhouse-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-rain.jpg
-- name: power-lines-power-lines-empty-space-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-umberto-bocc.jpg
-- name: old-granary-field-oldhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-dream.jpg
-- name: aws-s3-square-machine-road-light-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-machine-road-light-dali-square.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-rain.jpg
-- name: berlinwall-DSC-0084-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-mucha-mult.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-spagetti-accident.jpg
-- name: border-crossing-bordercrossing-purple-pond.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purple-pond.png
-- name: oldsmallboat-oldsmallboat-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-light-dali.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
-- name: blossombar-oily-mcoilface-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-00-00.jpg
-- name: downtown-los-angeles-downtown-la-ww2-color.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-color.JPG
-- name: machine-road-machine-road-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-attack-planes.jpg
-- name: mediterranean-mediterranean-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-nazi-poster.jpg
-- name: locked-up-steam-lock-up-steam-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-post-modern.jpg
-- name: liberty-back-statue-liberty-back-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alberto-giacometti.jpg
-- name: liberty-back-statue-liberty-back-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-missle.jpg
-- name: stories-soldier-computer-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-soldier-computer-dark-dali.jpg
-- name: old-gas-pumps-oldgaspumps-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gan-vogh.jpg
-- name: gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
-- name: mistywoods-babyfoot-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-constitution.jpg
-- name: oldroad-old-road-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-really-hot.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-really-hot.jpg
-- name: aws-s3-stories-soldier-computer-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-soldier-computer-dark-dali.jpg
-- name: bordercrossing-bordercrossing-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
-- name: old-granary-field-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-electricity.jpg
-- name: berlinwall-DSC-0084-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-far-away.jpg
-- name: christianity-christianity-under-construction-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-pablo-blue.jpg
-- name: old-barn-old-barn-1500-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-umberto-bocc.jpg
-- name: blossombar-crafty-painting-file-00-00-50-32.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-32.jpg
+- name: berlinwall-DSC-0084-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-kandinsky-bv.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-really-hot.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg.JPG
+- name: fence-mexico-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-graham-sutherland.jpg
+- name: abe-lincoln-one-yellow-collage-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-15-87.jpg
+- name: white-house-lawn-white-house-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
+- name: oldroad-old-road-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-light-dali.jpg
+- name: border-crossing-bordercrossing-marcel-duchamp.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-marcel-duchamp.png
+- name: abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
+- name: yosemite-yosemite-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-electricity.jpg
+- name: catacombs-catacombs-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-attack-planes.jpg
+- name: amusement-park-amusement-park-2-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-ww2-color.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
+- name: containership-containership-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-cinnamon-rolls.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+- name: docks-docks-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-oily-mcoilface.jpg
+- name: downtheline-downtheline-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-dream.jpg
+- name: oldroad-old-road-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
+- name: containership-containership-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-hot-spicy.jpg
+- name: locked-up-steam-lock-up-steam-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-rainbow-festival.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: old-gas-pumps-oldgaspumps-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crunch-paper.jpg
+- name: trucksilo-trucksilo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-smooth-ride.jpg
+- name: nyc-flag-nycflag-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crunch-paper.jpg
+- name: server-cloud-server-racks-clouds-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-sunday.jpg
+- name: eduardo-eduardo-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-storm.jpg
+- name: windowmountain-window-mountain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-clean-view.jpg
+- name: fence-fence-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-smoking-cigarette.jpg
+- name: old-granary-field-oldhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
+- name: wind-mills-windmills-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
+- name: fence-fence-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
+- name: server-cloud-server-racks-clouds-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-copper-circuit.jpg
+- name: old-door-lock-old-door-lock-2-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-propaganda-leaflets.jpg
+- name: castle-wall-DSC-0067-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
+- name: old-door-lock-old-door-lock-2-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-nazi-poster.jpg
+- name: wind-mills-windmills-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-marcel-duchamp.jpg
+- name: liberty-back-statue-liberty-back-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-creativity.jpg
+- name: oldhouse-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-neo-instinct.jpg
+- name: sand-hand-sand-hand-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
+- name: mistywoods-babyfoot-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-green-zuma.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
+- name: paris-paris-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
+- name: liberty-back-statue-liberty-back-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-aqua.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: downtown-trucksilo-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-ww2-dresden.jpg
+- name: carry-load-carryload-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crabapple.jpg
+- name: server-cloud-server-racks-clouds-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-sand-paper.jpg
+- name: crow_alberto_giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_alberto_giacometti.jpg
+- name: fence-gorilla.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla.jpg
+- name: border-crossing-bordercrossing-yellow-collage.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-collage.png
+- name: oldhousecars-house-old-cars-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-satan-red.jpg
 ---
 No Ifs, Ands, Or Buts!.&nbsp;Communities Discuss Improving Courts System At Judicial Listening Session.&nbsp;Trump's Approval Rating Holding Steady.&nbsp;Feral Hogs Are Taking Over Texas.&nbsp;Duluth Renames City Park In Ojibwe Language.&nbsp;Motel Clerk Changes Diaper, Notifies Police Of Children Left Alone In Motel Room.&nbsp;Expo Square Showcases New Equine Livestock Stalls In Super Duty Barn.&nbsp;Payson's Mogollon Monster Mudda Lets Adults Feel Like Kids.&nbsp;
